Further post wrapping fixes

--- a/src/assets/styles/pages/post.less
+++ b/src/assets/styles/pages/post.less
@@ -253,7 +253,6 @@
 //Contains the entire post
 
 .post__wrapper__new {
-  width: 100%;
   margin-left: 10px;
   display: flex;
   flex-direction: row;
@@ -288,8 +287,6 @@
 
 .post__body__new {
   margin-left: 10px;
-  height: 100%;
-  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -311,7 +308,6 @@
 //Contains post thumbnail image, NSFW label, and "Post info" section.
 
 .post__content__new {
-  width: 100%;
   margin-top: 8px;
   display: flex;
   flex-direction: row;
